--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <li><a class="box" href="https://transfonter.org/" target="_blank" rel="nofollow"><img src="images/transfornter.png" alt=""></a></li>
                 <li><a class="box" href="https://webcode.tools/" target="_blank" rel="nofollow"><img src="images/web-code-tools.png" alt=""></a></li>
                 <li><a class="box" href="https://learncomputeracademy.github.io/head/" target="_blank" rel="nofollow"><img src="images/head.png" alt=""></a></li>
-                <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/imdb-100x50.jpg" alt=""></a></li>
-                <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/the-wather-chanel-100x50.jpg" alt=""></a></li>
-                <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/snap-3-87x55.png" alt=""></a></li>
-                <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/google-maps-3-82x55.jpg" alt=""></a></li>
+                <li><a class="box" href="https://www.adobe.com/express/feature/image/remove-background" target="_blank" rel="nofollow"><img src="images/background-remover.png" alt=""></a></li>
+                <li><a class="box" href="https://www.watermarkremover.io/" target="_blank" rel="nofollow"><img src="images/watermark-remover.png" alt=""></a></li>
+                <li><a class="box" href="https://wp-kama.com/handbook/cheatsheet" target="_blank" rel="nofollow"><img src="images/wp-kama.png" alt=""></a></li>
+                <!-- <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/google-maps-3-82x55.jpg" alt=""></a></li>
                 <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/gmail-logo-2-100x51.jpg" alt=""></a></li>
                 <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/yahoo-mail-4-1-100x51.jpg" alt=""></a></li>
                 <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/outlook-mail-1-100x50.png" alt=""></a></li>
@@ -127,7 +127,7 @@
                 <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/yelp-100x50.jpg" alt=""></a></li>
                 <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/cnn-1-87x55.png" alt=""></a></li>
                 <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/Fox-News-1-100x55.png" alt=""></a></li>
-                <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/5-100x48.jpg" alt=""></a></li>
+                <li><a class="box" href="#" target="_blank" rel="nofollow"><img src="images/5-100x48.jpg" alt=""></a></li> -->
             </ul>
         </div>
     </main>
@@ -135,24 +135,24 @@
     <section class="bottom-nav">
         <div class="container">
             <ul>
-                <li><a href="#"><img src="images/email.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/note.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/text.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/weekly-calendar.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/cloudy.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/globe.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/rugby.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/film-roll.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/music-player.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/game.png" alt=""></a></li>
-                <li><a href="#"><img src="images/bitcoin.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/dollar-coin-money.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/Google__G__Logo.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/download-36x36.png" alt=""></a></li>
-                <li><a href="#"><img src="images/bingsvg.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/Apple_Logo_Svg.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/picture.svg" alt=""></a></li>
-                <li><a href="#"><img src="images/logo-squre.jpg" alt=""></a></li>
+                <li><a href="https://review.computercenter.in/" target="_blank" rel="nofollow"><img src="images/google-reviews.png" alt=""></a></li>
+                <!-- <li><a href="#" target="_blank" rel="nofollow"><img src="images/note.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/text.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/weekly-calendar.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/cloudy.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/globe.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/rugby.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/film-roll.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/music-player.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/game.png" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/bitcoin.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/dollar-coin-money.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/Google__G__Logo.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/download-36x36.png" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/bingsvg.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/Apple_Logo_Svg.svg" alt=""></a></li>
+                <li><a href="#" target="_blank" rel="nofollow"><img src="images/picture.svg" alt=""></a></li> -->
+                <li><a href="https://homepage.computercenter.in/extension.rar" target="_blank" rel="nofollow"><img src="images/download-extension.png" alt=""></a></li>
             </ul>
         </div>
     </section>
