--- a/extension/newtab.html
+++ b/extension/newtab.html
@@ -1,11 +1,11 @@
-<!-- newtab.html -->
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirecting to Computer Center Homepage</title>
-  <script src="newtab.js"></script>
+  <title>Computer Center</title>
+  <meta charset="utf-8">
+  <script src="newtab.js" defer></script>
 </head>
 <body>
-  <p>Redirecting to Computer Center Homepage...</p>
+  <!-- Page will redirect automatically -->
 </body>
 </html>
