--- a/extension/newtab.html
+++ b/extension/newtab.html
@@ -1,11 +1,11 @@
+<!-- newtab.html -->
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Computer Center</title>
-  <meta charset="utf-8">
-  <script src="newtab.js" defer></script>
+  <title>Redirecting to Computer Center Homepage</title>
+  <script src="newtab.js"></script>
 </head>
 <body>
-  <!-- Page will redirect automatically -->
+  <p>Redirecting to Computer Center Homepage...</p>
 </body>
 </html>
