--- a/index.html
+++ b/index.html
@@ -465,5 +465,7 @@
 
 
     </script>
+
+    <script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script>
 </body>
 </html>
