--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
     displayInstallationInstructions();
     </script>
 <!-- <script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script> -->
-    <script src="https://raw.githubusercontent.com/amartadey/robotBlocker/refs/heads/main/robotBlocker.js"></script>
+    <!-- <script src="https://raw.githubusercontent.com/amartadey/robotBlocker/refs/heads/main/robotBlocker.js"></script> -->
+    <script src="rocketloader.js"></script>
 </body>
 </html>
