--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
     }
     displayInstallationInstructions();
     </script>
-<!-- <script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script> -->
-    <!-- <script src="https://raw.githubusercontent.com/amartadey/robotBlocker/refs/heads/main/robotBlocker.js"></script> -->
-    <script src="rocketloader.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script>
+    
+    
 </body>
 </html>
