--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <li><a href="#" data-type="images">Images</a></li>
                     <li><a href="#" data-type="videos">Videos</a></li>
                     <li><a href="#" data-type="news">News</a></li>
+                    <li><a href="#" onclick="window.open('https://playground.learncomputer.in/search/', '_blank');">Advanced</a></li>
                 </ul>
             </div>
             <div class="search-bar">
