--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <div class="container">
             <ul>
                 <li><a href="https://review.computercenter.in/" target="_blank" rel="nofollow"><img src="images/google-reviews.png" alt=""></a></li>
+                <li><a href="./files/NetworkReset-RunAsAdminstrator.bat" target="_blank" rel="nofollow"><img src="images/network-reset.png" alt=""></a></li>
             </ul>
         </div>
     </section>
