--- a/index.html
+++ b/index.html
@@ -380,6 +380,12 @@
     }
     displayInstallationInstructions();
     </script>
+<script>
+     window.RobotBlockerConfig = {
+        blockRightClick: false,
+        blockDevTools: false,
+    };
+</script>
 <script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script>
     
     
