--- a/index.html
+++ b/index.html
@@ -498,6 +498,9 @@
      window.RobotBlockerConfig = {
         blockRightClick: false,
         blockDevTools: false,
+        blockSelection: false,
+        blockPrintScreen: false,
+        disableDragDrop: false,
     };
 </script>
 <script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script>
