--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     }
     displayInstallationInstructions();
     </script>
-<script>
+<!-- <script>
      window.RobotBlockerConfig = {
         blockRightClick: false,
         blockDevTools: false,
@@ -503,7 +503,7 @@
         disableDragDrop: false,
     };
 </script>
-<script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/amartadey/robotBlocker@latest/robotBlocker.js"></script> -->
     
     
 </body>
