--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <h3>How to Install the Chrome Extension</h3>
             <p>To install this extension for free without using the Chrome Web Store, follow these steps:</p>
             <ol>
-                <li><strong>Download:</strong> &nbsp; &nbsp;Download the Plugin by clicking on this link - <a href="https://learncomputeracademy.github.io/homepage/lca-homepage-extension.zip" style="color:#ff7810" download="lca-homepage-extension.zip" target="_blank" rel="noopener noreferrer">https://learncomputeracademy.github.io/homepage/lca-homepage-extension.zip</a>. If clicking the link doesn't open it, copy the link and open a new tab and paste the link.</li>
+                <li><strong>Download:</strong> &nbsp; &nbsp;Download the Plugin by clicking on this link - <a href="https://homepage.computercenter.in/lca-homepage-extension.zip" style="color:#ff7810" download="lca-homepage-extension.zip" target="_blank" rel="noopener noreferrer">https://homepage.computercenter.in/lca-homepage-extension.zip</a>. If clicking the link doesn't work, please copy and paste it into a new tab.</li>
                 <li><strong>Unzip the File:</strong> Once you download the <code>lca-homepage-extension.zip</code> file, you must unzip it. This will create a regular folder. Place this folder somewhere permanent, like your Desktop or Documents folder (if you delete it, the extension will be removed).</li>
                 <li><strong>Open Chrome Extensions:</strong> Open the Google Chrome browser, type <code>chrome://extensions</code> into the address bar, and press Enter.</li>
                 <li><strong>Enable Developer Mode:</strong> In the top-right corner of the extensions page, find the toggle switch for "Developer mode" and turn it <strong>on</strong>.</li>
