--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <span class="close-button">&times;</span>
             <div class="code-tool-container">
                 <div class="code-tool-header">
-                    <h3><i class='bx bx-code-curly' style="vertical-align: middle;"></i> Code Tool</h3>
+                    <h3><i class='bx bx-code-curly' style="vertical-align: middle;"></i> Code Minifier & Beautifier</h3>
                      <div class="code-tool-controls">
                         <button id="upload-btn"><i class='bx bx-upload'></i> Upload File</button>
                         <input type="file" id="file-input" style="display: none;">
