--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- CodeMirror for Syntax Highlighting Editor -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/theme/tomorrow-night.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/theme/monokai.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- New Styles for Modal -->
@@ -142,9 +142,6 @@
             font-family: 'Fira Code', monospace;
             font-size: 14px;
         }
-        .CodeMirror-scroll {
-             background-color: #2d2d2d;
-        }
         .code-tool-footer {
             display: flex;
             justify-content: center;
@@ -179,10 +176,10 @@
         }
         .stats-bar {
             font-size: 12px;
-            color: #888;
+            color: #aaa;
             padding: 5px 10px;
             text-align: right;
-            background-color: #252525;
+            background-color: #272822; /* Monokai background color */
             border-top: 1px solid #444;
         }
         .swap-pane {
@@ -600,7 +597,7 @@
         // --- Code Tool Functionality ---
         const commonConfig = {
             lineNumbers: true,
-            theme: "tomorrow-night",
+            theme: "monokai",
             lineWrapping: true,
             indentUnit: 2,
             tabSize: 2
